tdf#162555: change rtl::Reference creation order

GalleryDrawingModel takes ownership of passed model; so when it
gets destroyed, the model is destroyed, too. Destroying SdrPage
tries to set the model modified.

Change-Id: I2f00f21ee8b74711fb62e409351cbdb33abe5f0a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172196
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 0afb4cfc5ed1e926dfd287007c5a35585584daec)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172201
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>